infra/k8s-dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  rules:
    - host: kamaljaya.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /api/produk/?(.*)
            pathType: Prefix
            backend:
              service:
                name: produk-service
                port:
                  number: 3000
          - path: /api/pembayaran/?(.*)
            pathType: Prefix
            backend:
              service:
                name: pembayaran-service
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend: 
              service:
                name: client-service
                port: 
                  number: 3000
